[tool.poetry]
name = "reapy-sil"
version = "0.1.0"
description = ""
authors = ["Felix Weiß <weiss@soundinnovationlab.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = "^0.111.0"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
