[tool.poetry]
name = "python-reapy"
version = "0.1.0"
description = "A pythonic wrapper for REAPER's ReaScript Python API"
authors = ["Roméo Després <mail.reapy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
psutil = "^5.9.8"
typing-extensions = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
