[tool.poetry]
name = "reapy"
version = "0.1.0"
description = ""
authors = ["Felix Weiss <weiss@soundinnovationlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.8"
typing-extensions = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
